Sometimes back/forward navigation get stuck until page reload (F5)
Categories
(Core :: DOM: Navigation, defect, P2)
Tracking
()
People
(Reporter: alice0775, Assigned: smaug)
References
(Blocks 2 open bugs)
Details
(Keywords: nightly-community, Whiteboard: [fission])
Attachments
(4 files)
The problem appear if Fission is enabled.
Steps to reproduce:
- Enable Fission
- Open https://ftp.mozilla.org/pub/firefox/nightly/
- Open https://www.getginger.jp/ in the same tab
- Open https://ftp.mozilla.org/pub/firefox/nightly/ in the same tab
- Click the back button quickly and repeatedly until the first page is displayed.
OR
Press and hold Alt+← key until the first page is displayed. - Click the forward button quickly and repeatedly until the last page is displayed.
OR
Press and hold Alt+→ key until the first page is displayed. - Repeat step 5 and step 6
Actual Results:
Sometimes, Page is blank and back/forward navigation get stuck.
Pressing F5 will load the page and display it correctly, then subsequent back/forward clicks will work.
Expected Results:
back/forward navigation should not get stuck.
| Reporter | ||
Comment 1•4 years ago
|
||
This is not a recent regression. I can reproduce the issue Nightly87.0a1 if Fission is enabled.
However, when Fission is disabled, this problem does not seem to occur.
| Reporter | ||
Updated•4 years ago
|
Comment 2•4 years ago
|
||
Olli, here is another back/forward navigation that is only reproducible in Fission.
Comment 4•4 years ago
|
||
I think I've run into basically the same bug, I also have fission enabled in Nightly.
Closed accidentally it seems.
Comment 6•4 years ago
|
||
Assigning to Olli.
Tracking for Fission MVP. This bug sounds pretty bad.
@ Alice0775: thanks for the excellent bug report, as always! :)
| Reporter | ||
Comment 7•4 years ago
|
||
Regression window where the back/forward problem is first seen:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=f9eaabcf04e04f2b92ff6aa692599c2eabe92bf0&tochange=573659457e9c755806b3503803c05f45871fbab7
Comment 8•4 years ago
|
||
(In reply to Alice0775 White from comment #7)
Regression window where the back/forward problem is first seen:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=f9eaabcf04e04f2b92ff6aa692599c2eabe92bf0&tochange=573659457e9c755806b3503803c05f45871fbab7
Alice0775, thank you for the regression window!
In that case, this bug is a regression from bug 1668577.
| Assignee | ||
Comment 9•4 years ago
|
||
Alice or Tom, do you have more hints how to reproduce this?
Like, should I open first a new tab (so that it loads about:newtab) before loading the first page, or should I ctrl+click that link so that
first page is https://ftp.mozilla.org/pub/firefox/nightly/?
I have tried to reproduce, in both ways, but not luck yet.
And I have waited for the page to load, and I have just triggered next load asap.
| Reporter | ||
Comment 10•4 years ago
|
||
Sorry for the lack of information.
1st page is https://www.mozilla.org/en-US/firefox/nightly/firstrun/
2nd https://ftp.mozilla.org/pub/firefox/nightly/
3rd https://www.getginger.jp/ in the same tab
4th https://ftp.mozilla.org/pub/firefox/nightly/
Screencast: https://youtu.be/8oX96Jn_d2g
00:10 the bug appears, forward button stops working
00:22 reload
00:25 forward button is working again
Comment 11•4 years ago
|
||
This bug still happens to me, but I don't have a good way of reproducing it.
| Assignee | ||
Comment 12•4 years ago
|
||
Can you still reproduce this?
(I can't, but even after some fixes it was difficult to reproduce.)
| Reporter | ||
Comment 13•4 years ago
|
||
Yes, I can reproduce the issue in Nightly95.0a1(20211004215121) Windows10 With STR comment #0 and comment #10.
Clicking back/forward button stops responding until reload.
| Assignee | ||
Comment 14•4 years ago
|
||
I've actually never managed to reproduce that issue. I've seen the blank page issue, but bug 1730977 fixed that (at least for me) and then there was another issue which bug 1725680 fixed.
But ok, thanks, I'll keep trying to reproduce this.
| Assignee | ||
Comment 15•4 years ago
|
||
No luck reproducing, but bug 1734858 might help here
| Reporter | ||
Comment 17•4 years ago
|
||
In Nightly95.0a1(20211013212517),
I can still reproduce the issue if fission is enabled.
| Assignee | ||
Comment 18•4 years ago
•
|
||
thanks for testing. I'll keep trying out to reproduce the issue.
Comment 19•4 years ago
|
||
I've also been trying to reproduce, but haven't managed to either.
| Reporter | ||
Comment 20•4 years ago
|
||
I can still reproduce the issue in latest Nightly.
However,
That so far I have only been able to reproduce the problem with the combination on this site.
No other site combinations or similar reports by other users have been found.
Also, when this problem occurs, it is easy to recover by pressing F5.
Based on these, Mark this as WONTFIX.
Maybe lets mark as incomplete instead given that it's not possible to reproduce for us. We could reopen if needed.
Comment 22•4 years ago
|
||
Comment 23•4 years ago
|
||
I can easily reproduce this bug also with these sites (and maybe more):
https://www.t-online.de/
https://us.yahoo.com/
STR:
- Open a new tab
- Load https://www.t-online.de/ in the new tab
- Load https://us.yahoo.com/ in the same tab
- Load https://www.t-online.de/ again in the same tab
- Press and hold Alt+→ or Alt+← to get back or forward
| Reporter | ||
Comment 25•4 years ago
|
||
(In reply to kernp25 from comment #23)
I can also reproduce this in Nightly95.0a1 windows10.
:smaug, Could you please test if you can reproduce this with str in comment #23?
Comment 26•4 years ago
|
||
Still can't reproduce this.
(In reply to kernp25 from comment #23)
- Press and hold Alt+→ or Alt+← to get back or forward
The video seems to start after navigating in history to the first load of https://www.t-online.de/ and then goes forward one step. Is that done holding Alt+→?
Comment 27•4 years ago
|
||
I did manage to reproduce it once, by furiously going back and forward. Olly: here's some logging, I removed some irrelevant things from it, but still have the full log. I was going back, ended up on www.t-online.de but the page was blank.
Comment 28•4 years ago
|
||
Comment on attachment 9246811 [details]
Log
This seems part of the problem:
[Child 278575: Main Thread]: D/SessionHistory ChildSHistory::Go(-1), current index = 1
[Child 278575: Main Thread]: D/SessionHistory ChildSHistory::GotoIndex(0, -1), epoch 1
[Parent 276848: Main Thread]: D/SessionHistory HistoryGo(-1->0) epoch 1/id 44
[Parent 276848: Main Thread]: D/nsSHistory LoadEntry(0, 0x4, 0)
…
[Child 278575: Main Thread]: D/SessionHistory ChildSHistory::Go(-1), current index = 1
[Child 278575: Main Thread]: D/SessionHistory ChildSHistory::GotoIndex(0, -1), epoch 2
…
[Parent 276848: Main Thread]: D/SessionHistory HistoryGo(-1->-1) epoch 2/id 44
[Parent 276848: Main Thread]: D/nsSHistory LoadEntry(-1, 0x4, 0)
[Parent 276848: Main Thread]: D/nsSHistory Index out of range
[Parent 276848: Main Thread]: D/SessionHistory Dropping HistoryGo - bad index or same epoch (not in same doc)
Comment 29•4 years ago
|
||
(In reply to Peter Van der Beken [:peterv] from comment #26)
Is that done holding Alt+→?
Yes! You need to press and hold the keys (and not release them), until you get to the last or first history entry (or when the bug happens).
| Assignee | ||
Comment 30•4 years ago
|
||
I haven't managed to reproduce. Need to figure out from peterv's log.
| Assignee | ||
Comment 31•4 years ago
|
||
Updated•4 years ago
|
| Assignee | ||
Comment 32•4 years ago
•
|
||
The patch in comment 31 is a guess fix.
Try run
https://treeherder.mozilla.org/#/jobs?repo=try&revision=745c960fb52a2de3d34dcdea643646537111a170
| Assignee | ||
Comment 33•4 years ago
|
||
If anyone wants to try the guess fix:
https://treeherder.mozilla.org/logviewer?job_id=355777043&repo=try has the links to Windows build.
Click Show Job Info (if job info isn't already shown) and then top left iframe should have links to target.installer.exe and target.zip
Use either of those to test the patch.
Comment 34•4 years ago
|
||
Can you test the build and confirm, it is working now?
I have tested it and the bug does not seem to occur anymore.
| Reporter | ||
Comment 35•4 years ago
|
||
I can reproduce the issue with str comment#0 and comment#23 in trybuild(20211022182331).
And cannot reproduce with non-fission.
Comment 36•4 years ago
|
||
(In reply to kernp25 from comment #34)
I have tested it and the bug does not seem to occur anymore.
I did not checked, that fission was not enabled. The bug still happens for me too.
| Reporter | ||
Updated•4 years ago
|
Comment 37•4 years ago
|
||
(In reply to Alice0775 White from comment #35)
I can reproduce the issue with str comment#0 and comment#23 in trybuild(20211022182331).
And cannot reproduce with non-fission.
Olli, looks like Alice can still reproduce the bug with your try build (last month).
| Assignee | ||
Comment 38•4 years ago
|
||
Yes. The issue is that I haven't managed to reproduce the issue ever and I think peterv has seen it once.
So fixing this is really hard.
I wonder why this is so hard to reproduce for us.
Comment 39•4 years ago
•
|
||
comment #0 and comment #23 easily reproduces on my machine (I didn't have to be "furious"), so I maaay be able to help here...
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Comment 40•4 years ago
|
||
Requested index handling is very fragile. We should try to figure out a way to remove it altogether.
(But unfortunately some behavior similar to it is needed in certain cases).
The patch is a stop-gap solution.
Updated•4 years ago
|
Comment 41•4 years ago
|
||
Comment 42•4 years ago
|
||
| bugherder | ||
Updated•4 years ago
|
Comment 44•4 years ago
|
||
I could not reproduce the issue on Win10x64 using build 95.0a1 (20211019095357) and steps from comments 23 and 0.
Is the issue still reproducing on your side? using latest 98.0b4(https://bugzilla.mozilla.org/show_bug.cgi?id=1729545#:~:text=side%3F%20using%20latest-,98.0b4,-%3F)?
| Reporter | ||
Comment 45•4 years ago
|
||
(In reply to Monica Chiorean from comment #44)
I could not reproduce the issue on Win10x64 using build 95.0a1 (20211019095357) and steps from comments 23 and 0.
Is the issue still reproducing on your side? using latest 98.0b4(https://bugzilla.mozilla.org/show_bug.cgi?id=1729545#:~:text=side%3F%20using%20latest-,98.0b4,-%3F)?
I also can't reproduce the problem with Firefox 98.0b4 (build ID 20220213185901).
Comment 46•4 years ago
|
||
I noticed this was closed and was linked to my dupe. But this is happening for me still. Just came back from being out, woke up my PC, opened a new window, searched and clicked a link, closed window, ctrl+shift+n to re-open it, hit back but it just "refreshes" the page does not go back. Forward and back go to the same page.
Comment 47•4 years ago
|
||
Nightly 99, linux, for reference
That's a different issue since this was about the navigation not responding at all. Could you open a new issue with:
- The name of the search engine
- The link you clicked (even if it was a random click)
Thanks!
Comment 49•4 years ago
|
||
It "responds", but the page is incorrect.
Should I re-open https://bugzilla.mozilla.org/show_bug.cgi?id=1728842 ?
| Assignee | ||
Comment 50•4 years ago
|
||
Comment 46 seems to talk about some session restore issue. zlice, could you file a new bug about that and have steps to reproduce there, thanks.
Comment 51•4 years ago
|
||
That isn't session restore. That's a running session I came back to after leaving it up for a while.
Thanks, but please file a new issue and then we can figure out whether it's indeed a new issue or a duplicate of something else.
Comment 53•4 years ago
|
||
Description
•