Bug 1729545, Try to ensure session history loads can't get stuck because of bogus requested index, r=peterv

Requested index handling is very fragile. We should try to figure out a way to remove it altogether.
(But unfortunately some behavior similar to it is needed in certain cases).
The patch is a stop-gap solution.

Differential Revision: https://phabricator.services.mozilla.com/D137479